--- a/Semesterprojekt/src/zuulgui/FXMLDocument.fxml
+++ b/Semesterprojekt/src/zuulgui/FXMLDocument.fxml
@@ -1,5 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="p" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="640.0" prefWidth="640.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zuulgui.FXMLDocumentController" />
+<Pane fx:id="pane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="1000.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="zuulgui.FXMLDocumentController">
+   <children>
+      <Canvas fx:id="c" height="640.0" layoutX="180.0" layoutY="180.0" width="640.0" />
+      <Button fx:id="button" layoutX="474.0" layoutY="124.0" mnemonicParsing="false" onAction="#handleButtonAction" text="Button" />
+   </children>
+</Pane>
